refactoring: abstraction of net types

--- a/code/app/src/main/res/layout/activity_smob_item_description.xml
+++ b/code/app/src/main/res/layout/activity_smob_item_description.xml
@@ -8,7 +8,7 @@
         <!-- data item that holds the smob item details -->
         <variable
             name="smobDataItem"
-            type="com.tanfra.shopmob.smob.smoblist.SmobDataItem" />
+            type="com.tanfra.shopmob.smob.types.SmobItem" />
     </data>
 
 
