--- a/code/app/src/main/res/layout/fragment_select_location.xml
+++ b/code/app/src/main/res/layout/fragment_select_location.xml
@@ -7,7 +7,7 @@
     <data>
         <variable
             name="viewModel"
-            type="com.tanfra.shopmob.smob.saveitem.SaveSmobItemViewModel" />
+            type="com.tanfra.shopmob.smob.activities.planning.saveitem.SaveSmobItemViewModel" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
