--- a/code/app/src/main/res/layout/activity_authentication.xml
+++ b/code/app/src/main/res/layout/activity_authentication.xml
@@ -11,7 +11,7 @@
         android:background="@color/white"
         android:orientation="vertical"
         android:gravity="center"
-        tools:context=".smob.activities.authentication.AuthenticationActivity">
+        tools:context=".smob.activities.authentication.SmobAuthenticationActivity">
 
         <ImageView
             android:id="@+id/icon"
