--- a/code/app/src/main/res/layout/activity_shopping.xml
+++ b/code/app/src/main/res/layout/activity_shopping.xml
@@ -7,15 +7,15 @@
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            tools:context=".smob.SmobActivityPlanning">
+            tools:context=".smob.SmobShoppingActivity">
 
                 <androidx.fragment.app.FragmentContainerView
-                    android:id="@+id/nav_host_fragment_planning"
+                    android:id="@+id/nav_host_fragment_shopping"
                     android:name="androidx.navigation.fragment.NavHostFragment"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     app:defaultNavHost="true"
-                    app:navGraph="@navigation/nav_graph_planning" />
+                    app:navGraph="@navigation/nav_graph_shopping" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
