--- a/code/app/src/main/res/layout/activity_administration.xml
+++ b/code/app/src/main/res/layout/activity_administration.xml
@@ -7,7 +7,7 @@
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            tools:context=".smob.SmobActivityAdministration">
+            tools:context=".smob.activities.administration.SmobAdministrationActivity">
 
                 <androidx.fragment.app.FragmentContainerView
                     android:id="@+id/nav_host_fragment_administration"
