--- a/code/app/src/main/res/layout/activity_shopping.xml
+++ b/code/app/src/main/res/layout/activity_shopping.xml
@@ -7,7 +7,7 @@
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            tools:context=".smob.SmobShoppingActivity">
+            tools:context=".smob.activities.shopping.SmobShoppingActivity">
 
                 <androidx.fragment.app.FragmentContainerView
                     android:id="@+id/nav_host_fragment_shopping"
