--- a/code/app/src/main/res/navigation/nav_graph_planning.xml
+++ b/code/app/src/main/res/navigation/nav_graph_planning.xml
@@ -29,6 +29,9 @@
         <action
             android:id="@+id/action_planningProductListFragment_to_planningListsFragment"
             app:destination="@id/smobPlanningListsFragment" />
+        <deepLink
+            android:id="@+id/deepLink"
+            app:uri="smob://shopmob.tanfra.com/productlist" />
     </fragment>
 
     <fragment
