--- a/code/app/src/main/res/layout/fragment_details_shop.xml
+++ b/code/app/src/main/res/layout/fragment_details_shop.xml
@@ -167,11 +167,9 @@
             android:id="@+id/clLocation"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:layout_constraintTop_toBottomOf="@id/clDescription"
-            app:layout_constraintBottom_toTopOf="@+id/btDismiss"
-            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            >
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/clDescription">
 
             <!-- invisible TV for alignment of label and edit text field -->
             <TextView
@@ -182,11 +180,10 @@
                 android:text="@string/anchor_char"
                 android:textSize="@dimen/invisible_gap_details"
                 android:visibility="invisible"
+                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintHorizontal_weight="0.1"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintBottom_toBottomOf="parent"
-                />
+                app:layout_constraintTop_toTopOf="parent" />
 
 
             <TextView
@@ -212,10 +209,9 @@
                 android:text="@{viewModel.smobShopDetailsItem.description}"
                 android:textSize="@dimen/label_text_size"
                 app:layout_constraintBaseline_toBaselineOf="@id/tvAnchorLoc"
-                app:layout_constraintStart_toEndOf="@+id/tvAnchorLoc"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_weight="0.7"
-                />
+                app:layout_constraintStart_toEndOf="@+id/tvAnchorLoc" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -237,8 +233,8 @@
             android:id="@+id/btFloorPlan"
             android:layout_width="@dimen/button_width"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/vertical_margin_large"
             android:layout_marginStart="@dimen/horizontal_margin_small"
+            android:layout_marginTop="@dimen/vertical_margin_huge"
             android:paddingStart="@dimen/button_padding"
             android:paddingEnd="@dimen/button_padding"
             android:text="@string/floor_plan"
@@ -246,27 +242,8 @@
             android:textSize="@dimen/button_text_size"
             android:textStyle="bold"
             app:layout_constraintTop_toBottomOf="@id/clLocation"
-            app:layout_constraintBottom_toTopOf="@id/btDismiss"
-            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            />
-
-        <Button
-            android:id="@+id/btDismiss"
-            android:layout_width="@dimen/button_width"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="@dimen/vertical_margin_large"
-            android:layout_marginStart="@dimen/horizontal_margin_small"
-            android:paddingStart="@dimen/button_padding"
-            android:paddingEnd="@dimen/button_padding"
-            android:text="@string/dismiss"
-            android:textColor="@color/colorAccent"
-            android:textSize="@dimen/button_text_size"
-            android:textStyle="bold"
-            app:layout_constraintTop_toBottomOf="@id/btFloorPlan"
-            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
             />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
