--- a/code/app/src/main/res/layout/fragment_planning_lists.xml
+++ b/code/app/src/main/res/layout/fragment_planning_lists.xml
@@ -25,7 +25,7 @@
                 android:id="@+id/smobItemsRecyclerView"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:liveDataResource="@{viewModel.smobList}"
+                android:stateFlowResource="@{viewModel.smobList}"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
