--- a/code/app/src/main/res/layout/fragment_planning_product_list.xml
+++ b/code/app/src/main/res/layout/fragment_planning_product_list.xml
@@ -25,7 +25,7 @@
                 android:id="@+id/smobItemsRecyclerView"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:stateFlowResource="@{viewModel.smobList}"
+                app:stateFlowResource="@{viewModel.smobList}"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
@@ -34,10 +34,10 @@
                 android:id="@+id/noDataTextView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:fadeVisible="@{viewModel.showNoData.booleanValue()}"
                 android:gravity="center"
                 android:text="@string/no_data"
                 android:textSize="@dimen/text_size_large"
+                app:fadeVisible="@{viewModel.showNoData.booleanValue()}"
                 app:drawableTopCompat="@drawable/ic_no_data"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"
@@ -50,8 +50,8 @@
                 android:id="@+id/progressBar"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:fadeVisibleOnLoading="@{viewModel.smobList}"
                 android:gravity="center"
+                app:fadeVisibleOnLoading="@{viewModel.smobList}"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
