--- a/code/app/src/main/res/layout/fragment_planning_shop_edit.xml
+++ b/code/app/src/main/res/layout/fragment_planning_shop_edit.xml
@@ -79,7 +79,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="@dimen/margin_normal"
-            android:fadeVisible="@{!viewModel.showLoading.booleanValue()}"
+            app:fadeVisible="@{!viewModel.showLoading.booleanValue()}"
             android:src="@drawable/ic_save"
             app:fabSize="normal"
             app:layout_anchorGravity="bottom|right|end"
@@ -92,7 +92,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:fadeVisible="@{viewModel.showLoading.booleanValue()}"
+            app:fadeVisible="@{viewModel.showLoading.booleanValue()}"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
