--- a/code/app/src/main/res/layout/fragment_details_product.xml
+++ b/code/app/src/main/res/layout/fragment_details_product.xml
@@ -19,6 +19,21 @@
         android:layout_height="wrap_content"
         >
 
+
+        <!-- centered (red) progress bar, indicating the loading state when accessing the DB -->
+        <ProgressBar
+            android:id="@+id/progressBar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:fadeVisible="@{viewModel.showLoading.booleanValue()}"
+            android:gravity="center"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            />
+
+
         <TextView
             android:id="@+id/tvHeading"
             android:layout_width="match_parent"
@@ -47,7 +62,8 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="1.0"
-            app:productImage="@{viewModel.smobProductDetailsItem.imageUrl}"
+            app:itemImage="@{viewModel.smobProductDetailsItem.imageUrl}"
+            tools:src="@drawable/smob_1"
             />
 
 
@@ -84,7 +100,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="@dimen/horizontal_margin_small"
                 android:layout_marginEnd="@dimen/horizontal_margin_small"
-                android:text="@string/title"
+                android:text="@string/title_product"
                 android:textSize="@dimen/label_text_size"
                 app:layout_constraintBaseline_toBaselineOf="@id/tvAnchorTitle"
                 app:layout_constraintEnd_toStartOf="@+id/tvAnchorTitle"
@@ -402,19 +418,6 @@
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
-
-        <!-- centered (red) progress bar, indicating the loading state when accessing the DB -->
-        <ProgressBar
-            android:id="@+id/progressBar"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:fadeVisible="@{viewModel.showLoading.booleanValue()}"
-            android:gravity="center"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
