--- a/code/app/src/main/res/values/dimens.xml
+++ b/code/app/src/main/res/values/dimens.xml
@@ -19,11 +19,12 @@
     <dimen name="vertical_margin_huge">100dp</dimen>
     <dimen name="vertical_margin_image">40dp</dimen>
     <dimen name="horizontal_margin_small">8dp</dimen>
-    <dimen name="horizontal_margin_huge">50dp</dimen>
+    <dimen name="horizontal_margin_huge">30dp</dimen>
     <dimen name="horizontal_margin_anchor_login">120dp</dimen>
     <dimen name="button_padding">16dp</dimen>
     <dimen name="button_text_size">18sp</dimen>
     <dimen name="label_text_size">18sp</dimen>
+    <dimen name="table_text_size">10sp</dimen>
     <dimen name="image_header_height">120dp</dimen>
     <dimen name="invisible_gap_details">30sp</dimen>
     <dimen name="button_width">200dp</dimen>
