--- a/code/app/src/debug/res/values/colors.xml
+++ b/code/app/src/debug/res/values/colors.xml
@@ -9,6 +9,12 @@
   <color name="primaryTextColor">#3e2723</color>
   <color name="secondaryTextColor">#263238</color>
 
+  <color name="swipeSecondaryLightColor">#F1FBF2</color>
+  <color name="swipePrimaryColor">#c8e6c9</color>
+  <color name="swipeSecondaryColor">#8EC190</color>
+  <color name="swipePrimaryTextColor">#1b5e20</color>
+  <color name="swipeSecondaryTextColor">#1b5e20</color>
+
   <color name="colorAccent">#D81B60</color>
   <color name="black">#000000</color>
   <color name="white">#ffffff</color>
