--- a/code/app/src/main/res/layout/smob_products_item.xml
+++ b/code/app/src/main/res/layout/smob_products_item.xml
@@ -16,6 +16,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/padding_medium"
+        android:foregroundTint="@color/swipePrimaryColor"
+        app:statusColor="@{item.status}"
         app:fadeVisible="@{true}">
 
         <androidx.constraintlayout.widget.ConstraintLayout
